Setup Firebase with project

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 # Firebase Web Chat App
 
 From the tutorial: [Firebase: Build a Real Time Web Chat App Codelab](https://codelabs.developers.google.com/codelabs/firebase-web/).
+
+Stopped here:
+https://firebase.google.com/codelabs/firebase-web#7
